# cs344

./: .gitignore  CMakeLists.txt  README.md  run-docker.sh
Problem_Sets/Problem_Set_1/: CMakeLists.txt  student_func.cu
Problem_Sets/Problem_Set_2/: CMakeLists.txt  student_func.cu
Problem_Sets/Problem_Set_3/: CMakeLists.txt  student_func.cu
Problem_Sets/Problem_Set_4/: CMakeLists.txt  student_func.cu
Problem_Sets/Problem_Set_5/: main.cu
dockerfiles/: Dockerfile
output/: run_all.sh
output/Problem_Set_1/: run.sh
output/Problem_Set_2/: run.sh
